added some styling

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
   <html>
     <head>
+      <style>
+        body {background-color:rgb(84, 123, 250);}
+        h1   {color: rgb(255, 255, 255);}
+        p    {color: rgb(255, 255, 255);}
+      </style>
       <title>Ruban's website</title>
     </head>
     <body>
