text alignment centered

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <title>Ruban's website</title>
     </head>
     <body>
-      <h1>Welcome</h1>
-      <p>nice to meet you.</p>
+      <h1 style="text-align:center;">Hi!</h1>
+      <p style="text-align:center;">nice to meet you.</p>
   </body>
 </html>
