added navigation bar

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <style>
-        body {background-color:rgb(84, 123, 250);}
-        h1   {color: rgb(255, 255, 255);}
-        p    {color: rgb(255, 255, 255);}
-      </style>
-      <title>Ruban's website</title>
-    </head>
-    <body>
-      <h1 style="text-align:center;">Hi!</h1>
-      <p style="text-align:center;">nice to meet you.</p>
+<html>
+  <head>
+    <link rel="stylesheet" href="styles.css">
+    <title>Ruban's website</title>
+  </head>
+  <body>
+    <nav class="topnav">
+      <a style="background-color: #04AA6D; color: white;" href="/">Home</a>
+      <a href="/">Contact</a>
+      <a href="/" style="float:right">About</a>
+    </nav>
+    <div style="padding:20px;">
+      <h1>Hi!</h1>
+      <p>nice to meet you.</p>
+      <h3>hello world</h3>
+    </div>
   </body>
 </html>
