--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
       <a href="/">Contact</a>
       <a href="/" style="float:right">About</a>
     </nav>
-    <div style="padding:20px;">
+    <div class ="contentdiv" style="padding:20px;">
       <h1>Hi!</h1>
       <p>nice to meet you.</p>
       <h3>hello world</h3>
+    </div>
+    <div class="formdiv">
+      <form class="data" >
+        <label for="fname">First name:</label>
+        <input type="text" id="fname" name="fname"><br><br>
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname"><br><br>
+        <label for="emailid">Email id :</label>
+        <input type="text" id="lname" name="email"><br><br>
+        <input type="submit" value="Submit">
+      </form>
     </div>
   </body>
 </html>
