--- a/index.html
+++ b/index.html
@@ -26,5 +26,12 @@
         <input type="submit" value="Submit">
       </form>
     </div>
+    <footer class="footdiv">
+      <h3>ABOUT</h3>
+      <p>this webpage was created in order to help me understand html, css and github.</p>
+      <div class="copyright">
+        <p>Copyright &copy 2022 All Rights Reserved by<br> Ruban.</p>
+      </div>
+    </footer>
   </body>
 </html>
