--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </nav>
     <div class ="contentdiv" style="padding:20px;">
       <h1>Hi!</h1>
+      <p>I am Ruban Jaganathan</p>
       <p>nice to meet you.</p>
       <h3>hello world</h3>
     </div>
